--- a/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhatWeDo.cshtml
@@ -6,7 +6,7 @@
                 <h1 class="section-heading">What We Do</h1>
             </div>
             <div class="col-12">
-                <p class="section-description"><i><strong>giving</strong> clothes, <strong>showing</strong> love, <strong>building</strong> confidence</i></p>
+                <p class="section-description"><i><strong>Giving</strong> clothes. <strong>Showing</strong> love. <strong>Building</strong> confidence.</i></p>
             </div>
             <div class="col-12" style="text-align:center;">
                 <span>Share</span>
@@ -50,7 +50,7 @@
         <!--Section heading-->
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Our Process</h1>
         <!--Section description-->
-        <p class="section-description lead wow fadeIn" data-wow-delay="0.2s">We have a simply process to get clothes into the hands of kids that need them</p>
+        <p class="section-description lead wow fadeIn" data-wow-delay="0.2s">We have a simple process to get clothes into the hands of kids that need them</p>
 
 
         <!--First row-->
