--- a/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
@@ -57,7 +57,7 @@
                 <div class="avatar">
                     <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
                 </div>
-                <h4>Perry</h4>
+                <h4>Perry Jeffers</h4>
                 <h5>Vice President</h5>
                 <p>Perry serves as our Vice President. He dedicates his time to assist Brandi with many day to day activities as well as offering guidance and wisdom in the vision and planning of our operations.</p>
 
