--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -64,14 +64,14 @@
                                         <li class="nav-item dropdown btn-group">
                                             <span class="nav-link waves-effect waves-light" id="AboutMeMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</span>
                                             <div class="dropdown-menu dropdown-primary" aria-labelledby="AboutMeMenu">
-                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhatWeDo")">What We Do</a>
                                                 <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhoWeAre")">Who We Are</a>
-                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhatWeGive")">What We Give</a>
+                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("LeadershipPage")">Leadership</a>
+                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("Home")">Who We Serve</a>
                                                 <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("FAQ")">Frequently Asked Questions</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Who We Serve</a>
+                                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("OurWork")">Our Work</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Stories</a>
@@ -120,13 +120,13 @@
                                 <li><span>About Us</span>
                                     <ul>
                                         <li class="top-level"><a>About Us</a></li>
-                                        <li><a href="@Url.RouteUrl("WhatWeDo")">What We Do</a></li>
                                         <li><a href="@Url.RouteUrl("WhoWeAre")">Who We Are</a></li>
-                                        <li><a href="@Url.RouteUrl("WhatWeGive")">What We Give</a></li>
+                                        <li><a href="@Url.RouteUrl("LeadershipPage")">Leadership</a></li>
+                                        <li><a href="@Url.RouteUrl("Home")">Who We Serve</a></li>
                                         <li><a href="@Url.RouteUrl("FAQ")">Frequently Asked Questions</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="@Url.RouteUrl("Home")">Who We Serve</a></li>
+                                <li><a href="@Url.RouteUrl("OurWork")">Our Work</a></li>
                                 <li><a href="@Url.RouteUrl("Home")">Stories</a></li>
                                 <li><a href="@Url.RouteUrl("RequestClothes")">Request Clothes</a></li>
                                 <li><a href="@Url.RouteUrl("ManageAccount")">Account</a></li>
