--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -77,7 +77,14 @@
                                             <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Home")">Stories</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("RequestClothes")">Request Clothes</a>
+                                            @if (Request.IsAuthenticated)
+                                            {
+                                                <a class="nav-link waves-effect waves-light" href="@Url.Action("RequestClothesForm", "RequestClothes")">Request Clothes</a>
+                                            }
+                                            else
+                                            {
+                                                <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("RequestClothes")">Request Clothes</a>
+                                            }                                            
                                         </li>
                                         @if (Request.IsAuthenticated)
                                         {
@@ -128,8 +135,22 @@
                                 </li>
                                 <li><a href="@Url.RouteUrl("OurWork")">Our Work</a></li>
                                 <li><a href="@Url.RouteUrl("Home")">Stories</a></li>
-                                <li><a href="@Url.RouteUrl("RequestClothes")">Request Clothes</a></li>
-                                <li><a href="@Url.RouteUrl("ManageAccount")">Account</a></li>
+                                <li>
+                                    @if (Request.IsAuthenticated)
+                                    {
+                                        <a class="nav-link waves-effect waves-light" href="@Url.Action("RequestClothesForm", "RequestClothes")">Request Clothes</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("RequestClothes")">Request Clothes</a>
+                                    } 
+                                </li>
+                                <li>
+                                    @if (Request.IsAuthenticated)
+                                    {
+                                        <a href="@Url.RouteUrl("ManageAccount")">Account</a>
+                                    }
+                                </li>
                             </ul>
                         </nav>
                     </div>
